syntax = "proto3";

package proto;

import "common.proto";

service FileService {
  rpc AddFile (AddFileInputData) returns (File);
  rpc RemoveFileByToken(FileToken) returns (Status);
}

message FileToken {
  string token = 1;
}

message File {
  string uuid = 1;
  string token = 2;
  string userUuid = 3;
}

message AddFileInputData {
  string userUuid = 1;
  string token = 2;
  FileType type = 3;
}

enum FileType {
  video = 0;
  audio = 1;
  image = 2;
  document = 3;
  voice = 4;
  unknown = 5;
}
