syntax = "proto3";

package proto;

service FileService {
  rpc GetOneByName (GetOneByNameRequest) returns (File);
  rpc UpdateOneByName (UpdateOneByNameRequest) returns (File);
  rpc AddOne (AddFile) returns (File);
}

message File {
  string uuid = 1;
  string name = 2;
  string fileToken = 3;
}

message UpdateOneByNameRequest {
  string name = 1;
  string fileToken = 2;
}

message GetOneByNameRequest {
  string name = 1;
}

message AddFile {
  string name = 1;
  string fileToken = 2;
}